# langchain

./: pyproject.toml
langchain_study/: 1_intro.ipynb  2_model_integration.ipynb  3_tools.ipynb  intro.ipynb
